--- a/TrackingSig-API/appsettings.json
+++ b/TrackingSig-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RedisConnection": "" // Replace with your Redis server address
+    "Redis": "red-cs7v1qg8fa8c73cname0:94Up4lcTfrzkwNMSY7Fi9YymJm7vhFMe@oregon-redis.render.com:6379,ssl=true,abortConnect=false"
   },
   "Logging": {
     "LogLevel": {
