--- a/TrackingSig-API/appsettings.json
+++ b/TrackingSig-API/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings": {
-    "Redis": "red-cs7v1qg8fa8c73cname0:94Up4lcTfrzkwNMSY7Fi9YymJm7vhFMe@oregon-redis.render.com:6379,ssl=true,abortConnect=false"
+  //"ConnectionStrings": {
+  //  "Redis": "red-cs7v1qg8fa8c73cname0:94Up4lcTfrzkwNMSY7Fi9YymJm7vhFMe@oregon-redis.render.com:6379,ssl=true,abortConnect=false"
+  //},
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
