--- a/TrackingSig-API/appsettings.json
+++ b/TrackingSig-API/appsettings.json
@@ -1,9 +1,7 @@
 {
-  //"ConnectionStrings": {
-  //  "Redis": "red-cs7v1qg8fa8c73cname0:94Up4lcTfrzkwNMSY7Fi9YymJm7vhFMe@oregon-redis.render.com:6379,ssl=true,abortConnect=false"
-  //},
-  "Redis": {
-    "ConnectionString": "localhost:6379"
+  "RedisSettings": {
+    "Host": "decent-firefly-39737.upstash.io:6379",
+    "Password": "AZs5AAIjcDE2ZTJkMmM4N2M4NWQ0MDMwYmFhZjQ0Yjg0NjMwNjY4NHAxMA"
   },
   "Logging": {
     "LogLevel": {
